--- a/package.json
+++ b/package.json
@@ -9,6 +9,23 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.10"
+    "@astrojs/react": "^4.2.7",
+    "@radix-ui/react-slider": "^1.3.2",
+    "@tailwindcss/vite": "^4.1.5",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
+    "astro": "^5.7.10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "howler": "^2.2.4",
+    "lucide-react": "^0.507.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.5"
+  },
+  "devDependencies": {
+    "@types/howler": "^2.2.12",
+    "tw-animate-css": "^1.2.9"
   }
 }
